Finally decided how I want monster tables to look

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -203,32 +203,48 @@
           <p></p>
           <h4 id="queen_spider_stats">Boss Oni Stats</h4>
           <h2 id="monsters">Monsters</h2>
-          <div class="dungeon_monster_table">
+          <div class="onigashima_monster_table">
             <table>
               <tr>
                 <th>1</th>
-                <td class="monster_normal">Mamel ()</td>
-                <td class="monster_normal">Pit Mamel ()</td>
-                <td class="monster_normal">Chintala ()</td>
+                <td class="monster_normal">Mamel<br>(10)</td>
+                <td class="monster_normal">Pit Mamel<br>(5)</td>
+                <td class="monster_normal">Chintala<br>(10)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>2</th>
-                <td class="monster_normal">Mamel ()</td>
-                <td class="monster_normal">Pit Mamel ()</td>
-                <td class="monster_normal">Chintala ()</td>
+                <td class="monster_normal">Mamel<br>(8)</td>
+                <td class="monster_normal">Pit Mamel<br>(8)</td>
+                <td class="monster_normal">Chintala<br>(8)</td>
+                <td class="monster_normal">Weather Doll<br>(8)</td>
+                <td class="monster_weapon">Ashigarudon<br>(8)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>3</th>
-                <td class="monster_normal">Nigiri Trainee (8)</td>
-                <td class="monster_ghost">Yamikichi (9)</td>
+                <td class="monster_normal">Pit Mamel<br>(8)</td>
+                <td class="monster_normal">Nigiri Trainee<br>(8)</td>
                 <td></td>
-                <td class="monster_weapon">Ashigarudon (6)</td>
+                <td class="monster_normal">Weather Doll<br>(8)</td>
+                <td class="monster_weapon">Ashigarudon<br>(8)</td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -236,110 +252,191 @@
               </tr>
               <tr>
                 <th>4</th>
-                <td class="monster_normal">Nigiri Trainee (8)</td>
-                <td class="monster_ghost">Yamikichi (9)</td>
+                <td class="monster_normal">Small Oni<br>(10)</td>
+                <td class="monster_normal">Nigiri Trainee<br>(8)</td>
                 <td></td>
-                <td class="monster_weapon">Ashigarudon (6)</td>
-                <td class="monster_normal">Droplet Ninja (8)</td>
+                <td class="monster_normal">Weather Doll<br>(8)</td>
+                <td class="monster_weapon">Ashigarudon<br>(8)</td>
+                <td class="monster_normal">Armordillo Bro<br>(8)</td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>5</th>
-                <td class="monster_normal">Bow Boy (5)</td>
-                <td class="monster_normal">Mid Chintala (8)</td>
+                <td class="monster_normal">Small Oni<br>(10)</td>
+                <td class="monster_normal">Nigiri Trainee<br>(8)</td>
+                <td class="monster_normal">Droplet Ninja<br>(8)</td>
+                <td></td>
+                <td class="monster_water">Spearfish<br>(6)</td>
+                <td class="monster_normal">Armordillo Bro<br>(8)</td>
                 <td></td>
                 <td></td>
-                <td class="monster_normal">Droplet Ninja (8)</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>6</th>
+                <td class="monster_normal">Small Oni<br>(10)</td>
+                <td class="monster_water">Lt. Spearfish<br>(8)</td>
+                <td class="monster_normal">Droplet Ninja<br>(8)</td>
+                <td class="monster_drain">Hunger Puppet<br>(9)</td>
+                <td class="monster_water">Spearfish<br>(6)</td>
+                <td class="monster_normal">Armordillo Bro<br>(8)</td>
                 <td></td>
-                <td class="monster_normal">Gamarra (6)</td>
-                <td class="monster_special">Mr. Drone (4)</td>
-                <td class="monster_water">Spearfish (8)</td>
-                <td class="monster_one_eyed">Gazer (8)</td>
-                <td class="monster_water">Lt. Spearfish (8)</td>
-                <td class="monster_drain">Hunger Puppet (8)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>7</th>
-                <td class="monster_normal">N'dubba (5)</td>
-                <td class="monster_normal">Gamarra (6)</td>
-                <td class="monster_special">Mr. Drone (3)</td>
-                <td class="monster_water">Spearfish (8)</td>
-                <td class="monster_one_eyed">Gazer (8)</td>
-                <td class="monster_water">Lt. Spearfish (8)</td>
-                <td class="monster_drain">Hunger Puppet (8)</td>
-                <td class="monster_special">Mr. Helico (1)</td>
-              </tr>
-              <tr>
-                <th colspan="9" class="monster_table_checkpoint">Shuten Halfway</th>
+                <td class="monster_water">Capt. Spearfish<br>(7)</td>
+                <td class="monster_water">Lt. Spearfish<br>(8)</td>
+                <td class="monster_water">Shotfish<br>(8)</td>
+                <td class="monster_drain">Hunger Puppet<br>(9)</td>
+                <td class="monster_water">Spearfish<br>(7)</td>
+                <td class="monster_special">Mr. Drone<br>(3)</td>
+                <td class="monster_one_eyed">Gazer<br>(8)</td>
+                <td class="monster_normal">Boy Cart<br>(8)</td>
+                <td class="monster_ghost">Warukichi<br>(9)</td>
+                <td class="monster_normal">N'dubba<br>(6)</td>
+                <td></td>
+                <td></td>
               </tr>
               <tr>
                 <th>8</th>
-                <td class="monster_normal">N'dubba (5)</td>
-                <td class="monster_normal">Bow Cart (6)</td>
-                <td class="monster_drain">Scorpion (6)</td>
-                <td></td>
-                <td class="monster_one_eyed">Gazer (8)</td>
-                <td></td>
+                <td class="monster_water">Capt. Spearfish<br>(7)</td>
+                <td class="monster_drain">Scorpion<br>(8)</td>
+                <td class="monster_water">Shotfish<br>(8)</td>
+                <td class="monster_weapon">Samuraidon<br>(8)</td>
+                <td class="monster_water">Spearfish<br>(7)</td>
+                <td class="monster_special">Mr. Drone<br>(3)</td>
+                <td class="monster_one_eyed">Gazer<br>(8)</td>
+                <td class="monster_normal">Boy Cart<br>(8)</td>
+                <td class="monster_ghost">Warukichi<br>(9)</td>
+                <td class="monster_normal">N'dubba<br>(6)</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>9</th>
-                <td class="monster_normal">N'dubba (5)</td>
-                <td class="monster_normal">Bow Cart (6)</td>
-                <td class="monster_normal">Tiger Tosser (8)</td>
-                <td class="monster_normal">Sheep Priest (10)</td>
-                <td class="monster_ghost">Gale (6)</td>
+                <td class="monster_normal">Gamagucci<br>(7)</td>
+                <td class="monster_item_change">Nigiri Morph<br>(9)</td>
+                <td class="monster_item_change">Straw Voodoll<br>(10)</td>
+                <td class="monster_weapon">Samuraidon<br>(8)</td>
+                <td class="monster_normal">Sheep Priest<br>(8)</td>
+                <td class="monster_special">Mr. Drone<br>(3)</td>
+                <td class="monster_special">Mixer<br>(6)</td>
+                <td class="monster_normal">Boy Cart<br>(8)</td>
+                <td class="monster_ghost">Warukichi<br>(9)</td>
+                <td class="monster_normal">N'dubba<br>(6)</td>
+                <td class="monster_normal">Rainy Doll<br>(8)</td>
                 <td></td>
-                <td></td>
-                <td></td>
+                
               </tr>
               <tr>
                 <th>10</th>
-                <td class="monster_weapon">Taishodon (8)</td>
-                <td class="monster_weapon">Kengo (5)</td>
-                <td class="monster_normal">Tiger Tosser (8)</td>
-                <td class="monster_normal">Sheep Priest (8)</td>
-                <td class="monster_ghost">Gale (6)</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="monster_normal">Gamagucci<br>(7)</td>
+                <td class="monster_item_change">Nigiri Morph<br>(9)</td>
+                <td class="monster_item_change">Straw Voodoll<br>(10)</td>
+                <td class="monster_weapon">Samuraidon<br>(8)</td>
+                <td class="monster_normal">Sheep Priest<br>(8)</td>
+                <td class="monster_normal">Summon Ninja<br>(8)</td>
+                <td class="monster_special">Mixer<br>(6)</td>
+                <td class="monster_normal">Landmine Ninja<br>(6)</td>
+                <td class="monster_weapon">Taishodon<br>(6)</td>
+                <td class="monster_special">Mr. Helico<br>(2)</td>
+                <td class="monster_normal">Rainy Doll<br>(8)</td>
+                <td class="monster_one_eyed">Golem<br>(10)</td>
               </tr>
               <tr>
                 <th>11</th>
-                <td class="monster_weapon">Taishodon (8)</td>
-                <td class="monster_weapon">Kengo (5)</td>
-                <td class="monster_normal">Summon Ninja (8)</td>
-                <td class="monster_normal">Goat Pastor (8)</td>
-                <td class="monster_ghost">Pumphantasm (8)</td>
+                <td class="monster_normal">Gamagucci<br>(7)</td>
+                <td class="monster_weapon">Kengo<br>(7)</td>
+                <td class="monster_dragon">Shaaga<br>(10)</td>
+                <td class="monster_normal">Goat Pastor<br>(6)</td>
+                <td class="monster_normal">Sheep Priest<br>(8)</td>
+                <td class="monster_normal">Summon Ninja<br>(8)</td>
+                <td class="monster_special">Mixer<br>(6)</td>
+                <td class="monster_normal">Landmine Ninja<br>(6)</td>
+                <td class="monster_weapon">Taishodon<br>(8)</td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td class="monster_one_eyed">Golem<br>(10)</td>
               </tr>
               <tr>
                 <th>12</th>
-                <td class="monster_weapon">Taishodon (8)</td>
-                <td class="monster_weapon">Kengo (5)</td>
-                <td class="monster_normal">Summon Ninja (8)</td>
-                <td class="monster_normal">Goat Pastor (8)</td>
-                <td class="monster_ghost">Pumphantasm (8)</td>
+                <td class="monster_special">Mixermon<br>(4)</td>
+                <td class="monster_weapon">Kengo<br>(7)</td>
+                <td class="monster_dragon">Shaaga<br>(10)</td>
+                <td class="monster_normal">Goat Pastor<br>(6)</td>
+                <td class="monster_normal">Sheep Priest<br>(8)</td>
+                <td class="monster_normal">Summon Ninja<br>(8)</td>
+                <td class="monster_special">Mixer<br>(6)</td>
+                <td class="monster_normal">Landmine Ninja<br>(6)</td>
+                <td class="monster_weapon">Taishodon<br>(8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>13</th>
-                <td colspan="8" class="monster_water">3 Water Striders (Boss)</td>
+                <td class="monster_normal">Armor Spider<br>(4)</td>
+                <td class="monster_bomb">Wolf Droid<br>(6)</td>
+                <td class="monster_dragon">Shaaga<br>(10)</td>
+                <td class="monster_normal">Goat Pastor<br>(6)</td>
+                <td class="monster_bomb">Pop Tank<br>(7)</td>
+                <td class="monster_ghost">Pumphantom<br>(10)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
               </tr>
+              <tr>
+                <th>14</th>
+                <td class="monster_drain">Twisty Hani<br>(12)</td>
+                <td class="monster_bomb">Wolf Droid<br>(6)</td>
+                <td class="monster_drain">Serious Slug<br>(8)</td>
+                <td class="monster_water">Bored Kappa<br>(8)</td>
+                <td class="monster_bomb">Pop Tank<br>(7)</td>
+                <td class="monster_ghost">Pumphantom<br>(10)</td>
+                <td class="monster_water">Dragon Shotfish<br>(7)</td>
+                <td class="monster_normal">Rocky Oni<br>(9)</td>
+                <td class="monster_water">Water Strider<br>(4)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>15</th>
+                <td class="monster_drain">Twisty Hani<br>(12)</td>
+                <td class="monster_bomb">Wolf Droid<br>(6)</td>
+                <td class="monster_drain">Serious Slug<br>(8)</td>
+                <td class="monster_water">Bored Kappa<br>(8)</td>
+                <td class="monster_bomb">Pop Tank<br>(7)</td>
+                <td class="monster_ghost">Pumphantom<br>(10)</td>
+                <td class="monster_water">Dragon Shotfish<br>(7)</td>
+                <td class="monster_normal">Rocky Oni<br>(9)</td>
+                <td class="monster_water">Water Strider<br>(4)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>16</th>
+                <td colspan="12">Galaha (Boss) / 5 Small Oni / 4 Rocky Oni / 5 Lanky Oni / 4 Stumpy Oni</td>
+              </tr>
+
+
             </table>
             <p class="dungeon_table_notes">
               Numbers in parenthesis show monster spawn rate values.<br>
@@ -1052,6 +1149,24 @@
           <h2 id="floor_guide">Golden Interval</h2>
           <p>Text</p>
           <h3>Items</h3>
+          <h2 id="floor_guide">No Carry-in Guide</h2>
+          <p>Text</p>
+          <h3>Important Items</h3>
+          <p></p>
+          <h3>01~03F</h3>
+          <p></p>
+          <h3>04~06F</h3>
+          <p></p>
+          <h3>07~12F</h3>
+          <p></p>
+          <h3>13~15F</h3>
+          <p></p>
+          <h3>16F Galaha</h3>
+          <p></p>
+          <h3>17~24F</h3>
+          <p></p>
+          <h3>25F Boss Oni</h3>
+          <p></p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
