--- a/html/dungeon/shuten_trail_easy.html
+++ b/html/dungeon/shuten_trail_easy.html
@@ -407,8 +407,8 @@
                 <th>3</th>
                 <td class="monster_normal">Weather Doll (10)</td>
                 <td class="monster_weapon">Ashigarudon (7)</td>
-                <td rowspan="2" class="monster_ghost">Yamikichi (6)</td>
-                <td rowspan="2" class="monster_drain">Slug (5)</td>
+                <td class="monster_ghost">Yamikichi (6)</td>
+                <td class="monster_drain">Slug (5)</td>
                 <td></td>
                 <td></td>
               </tr>
@@ -416,6 +416,8 @@
                 <th>4</th>
                 <td class="monster_normal">Weather Doll (9)</td>
                 <td class="monster_weapon">Ashigarudon (10)</td>
+                <td class="monster_ghost">Yamikichi (6)</td>
+                <td class="monster_drain">Slug (5)</td>
                 <td class="monster_normal">Piko Hammer (6)</td>
                 <td></td>
               </tr>
@@ -442,29 +444,36 @@
               </tr>
               <tr>
                 <th>7</th>
-                <td rowspan="3" class="monster_normal">N'dubba (3)</td>
-                <td rowspan="2" class="monster_water">Zalokleft (8)</td>
-                <td rowspan="2" class="monster_drain">Hunger Puppet (8)</td>
+                <td class="monster_normal">N'dubba (3)</td>
+                <td class="monster_water">Zalokleft (8)</td>
+                <td class="monster_drain">Hunger Puppet (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>8</th>
+                <td class="monster_normal">N'dubba (3)</td>
+                <td class="monster_water">Zalokleft (8)</td>
+                <td class="monster_drain">Hunger Puppet (8)</td>
                 <td class="monster_weapon">Samuraidon (6)</td>
-                <td rowspan="2" class="monster_normal">Horse Ronin (6)</td>
+                <td class="monster_normal">Horse Ronin (6)</td>
                 <td></td>
               </tr>
               <tr>
                 <th>9</th>
-                <td rowspan="2" class="monster_normal">Tiger Tosser (6)</td>
-                <td rowspan="2" class="monster_item_change">Nigiri Morph (6)</td>
+                <td class="monster_normal">N'dubba (3)</td>
+                <td class="monster_normal">Tiger Tosser (6)</td>
+                <td class="monster_item_change">Nigiri Morph (6)</td>
                 <td class="monster_weapon">Samuraidon (10)</td>
+                <td class="monster_normal">Horse Ronin (6)</td>
                 <td></td>
               </tr>
               <tr>
                 <th>10</th>
                 <td class="monster_normal">Landmine Ninja (9)</td>
+                <td class="monster_normal">Tiger Tosser (6)</td>
+                <td class="monster_item_change">Nigiri Morph (6)</td>
                 <td class="monster_weapon">Samuraidon (8)</td>
                 <td class="monster_normal">Sheep Priest (9)</td>
                 <td class="monster_dragon">Shaaga (7)</td>
