--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -199,7 +199,7 @@
                 <th>1</th>
                 <td class="monster_normal">Mamel (10)</td>
                 <td class="monster_normal">Pit Mamel (5)</td>
-                <td rowspan="2" class="monster_normal">Chintala (8)</td>
+                <td class="monster_normal">Chintala (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -208,43 +208,51 @@
                 <th>2</th>
                 <td class="monster_normal">Mamel (8)</td>
                 <td class="monster_normal">Pit Mamel (8)</td>
+                <td class="monster_normal">Chintala (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <th>2</th>
-                <td rowspan="2" class="monster_normal">Piko Hammer (5)</td>
-                <td rowspan="2" class="monster_normal">Nigiri Trainee (4)</td>
+                <th>3</th>
+                <td class="monster_normal">Piko Hammer (5)</td>
+                <td class="monster_normal">Nigiri Trainee (4)</td>
                 <td class="monster_normal">Armordillo (8)</td>
-                <td rowspan="3" class="monster_drain">Slug (8)</td>
+                <td class="monster_drain">Slug (8)</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <th>2</th>
+                <th>4</th>
+                <td class="monster_normal">Piko Hammer (5)</td>
+                <td class="monster_normal">Nigiri Trainee (4)</td>
                 <td class="monster_normal">Droplet Ninja (5)</td>
+                <td class="monster_drain">Slug (8)</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>5</th>
                 <td></td>
-                <td rowspan="3" class="monster_normal">Bow Boy (8)</td>
-                <td rowspan="2" class="monster_normal">Droplet Ninja (6)</td>
+                <td class="monster_normal">Bow Boy (8)</td>
+                <td class="monster_normal">Droplet Ninja (6)</td>
+                <td class="monster_drain">Slug (8)</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>6</th>
                 <td class="monster_water">Zalokleft (7)</td>
+                <td class="monster_normal">Bow Boy (8)</td>
+                <td class="monster_normal">Droplet Ninja (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>7</th>
-                <td rowspan="2" class="monster_water">Zalokleft (5)</td>
+                <td class="monster_water">Zalokleft (5)</td>
+                <td class="monster_normal">Bow Boy (8)</td>
                 <td class="monster_normal">Tiger Tosser (5)</td>
                 <td class="monster_normal">Boy Cart (8)</td>
                 <td class="monster_ghost">Warukichi (8)</td>
@@ -252,6 +260,7 @@
               </tr>
               <tr>
                 <th>8</th>
+                <td class="monster_water">Zalokleft (5)</td>
                 <td></td>
                 <td class="monster_normal">Tiger Tosser (9)</td>
                 <td class="monster_normal">Boy Cart (9)</td>
@@ -272,16 +281,18 @@
               </tr>
               <tr>
                 <th>10</th>
-                <td rowspan="2" class="monster_one_eyed">Golem (8)</td>
+                <td class="monster_one_eyed">Golem (8)</td>
                 <td class="monster_special">Mixer (3)</td>
-                <td rowspan="2" class="monster_one_eyed">Ironhead (8)</td>
+                <td class="monster_one_eyed">Ironhead (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>11</th>
+                <td class="monster_one_eyed">Golem (8)</td>
                 <td class="monster_special">Mixer (2)</td>
+                <td class="monster_one_eyed">Ironhead (8)</td>
                 <td class="monster_weapon">Kengo (8)</td>
                 <td></td>
                 <td></td>
@@ -292,15 +303,21 @@
               </tr>
               <tr>
                 <th>13</th>
-                <td rowspan="2" class="monster_normal">King Tusker (8)</td>
-                <td rowspan="2" class="monster_bomb">Wolf Droid (8)</td>
-                <td rowspan="2" class="monster_normal">Bat Kangaroo (8)</td>
-                <td rowspan="2" class="monster_normal">Stone Beast (8)</td>
-                <td rowspan="2" class="monster_ghost">Whirlwind (8)</td>
-                <td rowspan="2" class="monster_bone">Bone Dragon (8)</td>
+                <td class="monster_normal">King Tusker (8)</td>
+                <td class="monster_bomb">Wolf Droid (8)</td>
+                <td class="monster_normal">Bat Kangaroo (8)</td>
+                <td class="monster_normal">Stone Beast (8)</td>
+                <td class="monster_ghost">Whirlwind (8)</td>
+                <td class="monster_bone">Bone Dragon (8)</td>
               </tr>
               <tr>
                 <th>14</th>
+                <td class="monster_normal">King Tusker (8)</td>
+                <td class="monster_bomb">Wolf Droid (8)</td>
+                <td class="monster_normal">Bat Kangaroo (8)</td>
+                <td class="monster_normal">Stone Beast (8)</td>
+                <td class="monster_ghost">Whirlwind (8)</td>
+                <td class="monster_bone">Bone Dragon (8)</td>
               </tr>
               <tr>
                 <th>15</th>
@@ -319,30 +336,75 @@
               <table>
                 <tr>
                   <th>1</th>
-                  <td rowspan="4" class="monster_one_eyed">Ironhead</td>
-                  <td rowspan="4" class="monster_bomb">Wolf Droid</td>
-                  <td rowspan="4" class="monster_one_eyed">Golem</td>
-                  <td rowspan="4" class="monster_normal">Boy Cart</td>
-                  <td rowspan="4" class="monster_drain">Slug</td>
-                  <td rowspan="4" class="monster_normal">Droplet Ninja</td>
-                  <td rowspan="4" class="monster_normal">Tiger Tosser</td>
-                  <td rowspan="4" class="monster_normal">Chintala</td>
-                  <td rowspan="4" class="monster_water">Zalokleft</td>
-                  <td rowspan="4" class="monster_ghost">Pumphantasm</td>
-                  <td rowspan="4" class="monster_normal">Bow Boy</td>
-                  <td rowspan="4" class="monster_special">Mixer</td>
-                  <td rowspan="4" class="monster_ghost">Warukichi</td>
-                  <td rowspan="4" class="monster_normal">Bat Kangaroo</td>
-                  <td rowspan="4" class="monster_bone">Bone Dragon</td>
+                  <td class="monster_one_eyed">Ironhead</td>
+                  <td class="monster_bomb">Wolf Droid</td>
+                  <td class="monster_one_eyed">Golem</td>
+                  <td class="monster_normal">Boy Cart</td>
+                  <td class="monster_drain">Slug</td>
+                  <td class="monster_normal">Droplet Ninja</td>
+                  <td class="monster_normal">Tiger Tosser</td>
+                  <td class="monster_normal">Chintala</td>
+                  <td class="monster_water">Zalokleft</td>
+                  <td class="monster_ghost">Pumphantasm</td>
+                  <td class="monster_normal">Bow Boy</td>
+                  <td class="monster_special">Mixer</td>
+                  <td class="monster_ghost">Warukichi</td>
+                  <td class="monster_normal">Bat Kangaroo</td>
+                  <td class="monster_bone">Bone Dragon</td>
                 </tr>
                 <tr>
                   <th>2</th>
+                  <td class="monster_one_eyed">Ironhead</td>
+                  <td class="monster_bomb">Wolf Droid</td>
+                  <td class="monster_one_eyed">Golem</td>
+                  <td class="monster_normal">Boy Cart</td>
+                  <td class="monster_drain">Slug</td>
+                  <td class="monster_normal">Droplet Ninja</td>
+                  <td class="monster_normal">Tiger Tosser</td>
+                  <td class="monster_normal">Chintala</td>
+                  <td class="monster_water">Zalokleft</td>
+                  <td class="monster_ghost">Pumphantasm</td>
+                  <td class="monster_normal">Bow Boy</td>
+                  <td class="monster_special">Mixer</td>
+                  <td class="monster_ghost">Warukichi</td>
+                  <td class="monster_normal">Bat Kangaroo</td>
+                  <td class="monster_bone">Bone Dragon</td>
                 </tr>
                 <tr>
                   <th>3</th>
+                  <td class="monster_one_eyed">Ironhead</td>
+                  <td class="monster_bomb">Wolf Droid</td>
+                  <td class="monster_one_eyed">Golem</td>
+                  <td class="monster_normal">Boy Cart</td>
+                  <td class="monster_drain">Slug</td>
+                  <td class="monster_normal">Droplet Ninja</td>
+                  <td class="monster_normal">Tiger Tosser</td>
+                  <td class="monster_normal">Chintala</td>
+                  <td class="monster_water">Zalokleft</td>
+                  <td class="monster_ghost">Pumphantasm</td>
+                  <td class="monster_normal">Bow Boy</td>
+                  <td class="monster_special">Mixer</td>
+                  <td class="monster_ghost">Warukichi</td>
+                  <td class="monster_normal">Bat Kangaroo</td>
+                  <td class="monster_bone">Bone Dragon</td>
                 </tr>
                 <tr>
                   <th>4</th>
+                  <td class="monster_one_eyed">Ironhead</td>
+                  <td class="monster_bomb">Wolf Droid</td>
+                  <td class="monster_one_eyed">Golem</td>
+                  <td class="monster_normal">Boy Cart</td>
+                  <td class="monster_drain">Slug</td>
+                  <td class="monster_normal">Droplet Ninja</td>
+                  <td class="monster_normal">Tiger Tosser</td>
+                  <td class="monster_normal">Chintala</td>
+                  <td class="monster_water">Zalokleft</td>
+                  <td class="monster_ghost">Pumphantasm</td>
+                  <td class="monster_normal">Bow Boy</td>
+                  <td class="monster_special">Mixer</td>
+                  <td class="monster_ghost">Warukichi</td>
+                  <td class="monster_normal">Bat Kangaroo</td>
+                  <td class="monster_bone">Bone Dragon</td>
                 </tr>
               </table>
               <p class="dungeon_table_notes">
@@ -1148,7 +1210,7 @@
                 ※ Memento Pot is a special item that only appears if you collapse in a dungeon.
               </li>
               <li>
-                ＊ Items that ally Kengo family monsters can fling during the boss fights on 13F and 15F.
+                ＊ Items that ally Kengo family monsters can fling during the boss fights on 12F and 15F.
               </li>
               <li>
                 ★ Possible drop from a higher level monster.
