--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -164,7 +164,7 @@
                 <th>1</th>
                 <td class="monster_normal">Mamel (10)</td>
                 <td class="monster_normal">Pit Mamel (5)</td>
-                <td rowspan="2" class="monster_normal">Chintala (8)</td>
+                <td class="monster_normal">Chintala (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -175,7 +175,8 @@
                 <th>2</th>
                 <td class="monster_normal">Mamel (8)</td>
                 <td class="monster_normal">Pit Mamel (14)</td>
-                <td rowspan="3" class="monster_weapon">Ashigarudon (6)</td>
+                <td class="monster_normal">Chintala (8)</td>
+                <td class="monster_weapon">Ashigarudon (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -183,9 +184,10 @@
               </tr>
               <tr>
                 <th>3</th>
-                <td rowspan="2" class="monster_normal">Nigiri Trainee (8)</td>
-                <td rowspan="2" class="monster_ghost">Yamikichi (9)</td>
+                <td class="monster_normal">Nigiri Trainee (8)</td>
+                <td class="monster_ghost">Yamikichi (9)</td>
                 <td></td>
+                <td class="monster_weapon">Ashigarudon (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -193,8 +195,11 @@
               </tr>
               <tr>
                 <th>4</th>
+                <td class="monster_normal">Nigiri Trainee (8)</td>
+                <td class="monster_ghost">Yamikichi (9)</td>
                 <td></td>
-                <td rowspan="2" class="monster_normal">Droplet Ninja (8)</td>
+                <td class="monster_weapon">Ashigarudon (6)</td>
+                <td class="monster_normal">Droplet Ninja (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -205,6 +210,7 @@
                 <td class="monster_normal">Mid Chintala (8)</td>
                 <td></td>
                 <td></td>
+                <td class="monster_normal">Droplet Ninja (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -212,18 +218,23 @@
               <tr>
                 <th>6</th>
                 <td></td>
-                <td rowspan="2" class="monster_normal">Gamarra (6)</td>
+                <td class="monster_normal">Gamarra (6)</td>
                 <td class="monster_special">Mr. Drone (4)</td>
-                <td rowspan="2" class="monster_water">Spearfish (8)</td>
-                <td rowspan="2" class="monster_one_eyed">Gazer (8)</td>
-                <td rowspan="2" class="monster_water">Lt. Spearfish (8)</td>
-                <td rowspan="2" class="monster_drain">Hunger Puppet (8)</td>
+                <td class="monster_water">Spearfish (8)</td>
+                <td class="monster_one_eyed">Gazer (8)</td>
+                <td class="monster_water">Lt. Spearfish (8)</td>
+                <td class="monster_drain">Hunger Puppet (8)</td>
                 <td></td>
               </tr>
               <tr>
                 <th>7</th>
                 <td class="monster_normal">N'dubba (5)</td>
+                <td class="monster_normal">Gamarra (6)</td>
                 <td class="monster_special">Mr. Drone (3)</td>
+                <td class="monster_water">Spearfish (8)</td>
+                <td class="monster_one_eyed">Gazer (8)</td>
+                <td class="monster_water">Lt. Spearfish (8)</td>
+                <td class="monster_drain">Hunger Puppet (8)</td>
                 <td class="monster_special">Mr. Helico (1)</td>
               </tr>
               <tr>
@@ -231,8 +242,8 @@
               </tr>
               <tr>
                 <th>8</th>
-                <td rowspan="2" class="monster_normal">N'dubba (5)</td>
-                <td rowspan="2" class="monster_normal">Bow Cart (6)</td>
+                <td class="monster_normal">N'dubba (5)</td>
+                <td class="monster_normal">Boy Cart (6)</td>
                 <td class="monster_drain">Scorpion (6)</td>
                 <td></td>
                 <td class="monster_one_eyed">Gazer (8)</td>
@@ -242,33 +253,44 @@
               </tr>
               <tr>
                 <th>9</th>
-                <td rowspan="2" class="monster_normal">Tiger Tosser (8)</td>
+                <td class="monster_normal">N'dubba (5)</td>
+                <td class="monster_normal">Boy Cart (6)</td>
+                <td class="monster_normal">Tiger Tosser (8)</td>
                 <td class="monster_normal">Sheep Priest (10)</td>
-                <td rowspan="2" class="monster_ghost">Gale (6)</td>
+                <td class="monster_ghost">Gale (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>10</th>
-                <td rowspan="3" class="monster_weapon">Taishodon (8)</td>
-                <td rowspan="3" class="monster_weapon">Kengo (5)</td>
+                <td class="monster_weapon">Taishodon (8)</td>
+                <td class="monster_weapon">Kengo (5)</td>
+                <td class="monster_normal">Tiger Tosser (8)</td>
                 <td class="monster_normal">Sheep Priest (8)</td>
+                <td class="monster_ghost">Gale (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>11</th>
-                <td rowspan="2" class="monster_normal">Summon Ninja (8)</td>
-                <td rowspan="2" class="monster_normal">Goat Pastor (8)</td>
-                <td rowspan="2" class="monster_ghost">Pumphantasm (8)</td>
+                <td class="monster_weapon">Taishodon (8)</td>
+                <td class="monster_weapon">Kengo (5)</td>
+                <td class="monster_normal">Summon Ninja (8)</td>
+                <td class="monster_normal">Goat Pastor (8)</td>
+                <td class="monster_ghost">Pumphantasm (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>12</th>
+                <td class="monster_weapon">Taishodon (8)</td>
+                <td class="monster_weapon">Kengo (5)</td>
+                <td class="monster_normal">Summon Ninja (8)</td>
+                <td class="monster_normal">Goat Pastor (8)</td>
+                <td class="monster_ghost">Pumphantasm (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
