--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -433,19 +433,196 @@
               </tr>
               <tr>
                 <th>16</th>
-                <td colspan="12">Galaha (Boss) / 5 Small Oni / 4 Rocky Oni / 5 Lanky Oni / 4 Stumpy Oni</td>
+                <td colspan="12" class="monster_normal">Galaha (Boss) / 5 Small Oni / 4 Rocky Oni / 5 Lanky Oni / 4 Stumpy Oni</td>
               </tr>
-
-
+              <tr>
+                <th>17</th>
+                <td class="monster_drain">Twisty Hani<br>(10)</td>
+                <td class="monster_normal">Porky<br>(8)</td>
+                <td class="monster_normal">Stormy Doll<br>(8)</td>
+                <td class="monster_water">Bored Kappa<br>(8)</td>
+                <td class="monster_one_eyed">Chainhead<br>(8)</td>
+                <td class="monster_normal">Evil Kangaroo<br>(8)</td>
+                <td class="monster_water">Dragon Shotfish<br>(8)</td>
+                <td class="monster_ghost">Whirlwind<br>(8)</td>
+                <td class="monster_water">Water Strider<br>(4)</td>
+                <td class="monster_water">Aqua Dragon<br>(6)</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>18</th>
+                <td class="monster_drain">Twisty Hani<br>(10)</td>
+                <td class="monster_normal">Porky<br>(8)</td>
+                <td class="monster_normal">Stormy Doll<br>(8)</td>
+                <td class="monster_water">Bored Kappa<br>(8)</td>
+                <td class="monster_one_eyed">Chainhead<br>(8)</td>
+                <td class="monster_normal">Evil Kangaroo<br>(8)</td>
+                <td class="monster_water">Dragon Shotfish<br>(6)</td>
+                <td class="monster_ghost">Whirlwind<br>(8)</td>
+                <td class="monster_normal">Rock Beast<br>(8)</td>
+                <td class="monster_water">Aqua Dragon<br>(6)</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>19</th>
+                <td class="monster_drain">Twisty Hani<br>(10)</td>
+                <td class="monster_normal">Porky<br>(8)</td>
+                <td class="monster_item_change">Nigiri Boss<br>(8)</td>
+                <td class="monster_water">Bored Kappa<br>(8)</td>
+                <td class="monster_one_eyed">Chainhead<br>(8)</td>
+                <td class="monster_normal">Evil Kangaroo<br>(8)</td>
+                <td class="monster_water">Dragon Shotfish<br>(6)</td>
+                <td class="monster_bomb">Patient Bag<br>(9)</td>
+                <td class="monster_normal">Rock Beast<br>(8)</td>
+                <td class="monster_water">Aqua Dragon<br>(6)</td>
+                <td class="monster_water">Green Zalokleft<br>(7)</td>
+                <td class="monster_normal">Tiger Hurler<br>(8)</td>
+              </tr>
+              <tr>
+                <th>20</th>
+                <td></td>
+                <td class="monster_drain">Starve Puppet<br>(8)</td>
+                <td class="monster_item_change">Nigiri Boss<br>(8)</td>
+                <td></td>
+                <td></td>
+                <td class="monster_normal">Evil Kangaroo<br>(8)</td>
+                <td></td>
+                <td class="monster_bomb">Patient Bag<br>(9)</td>
+                <td class="monster_normal">Rock Beast<br>(8)</td>
+                <td></td>
+                <td class="monster_water">Green Zalokleft<br>(7)</td>
+                <td class="monster_normal">Tiger Hurler<br>(8)</td>
+              </tr>
+              <tr>
+                <th>21</th>
+                <td></td>
+                <td class="monster_drain">Starve Puppet<br>(8)</td>
+                <td class="monster_item_change">Nigiri Boss<br>(8)</td>
+                <td></td>
+                <td></td>
+                <td class="monster_normal">Evil Kangaroo<br>(8)</td>
+                <td></td>
+                <td class="monster_bomb">Patient Bag<br>(9)</td>
+                <td class="monster_normal">Rock Beast<br>(8)</td>
+                <td></td>
+                <td class="monster_water">Green Zalokleft<br>(7)</td>
+                <td class="monster_normal">Tiger Hurler<br>(8)</td>
+              </tr>
+              <tr>
+                <th>22</th>
+                <td class="monster_dragon">Dragon<br>(6)</td>
+                <td class="monster_drain">Starve Puppet<br>(8)</td>
+                <td class="monster_normal">Monarch Tusker<br>(7)</td>
+                <td class="monster_drain">Demon Scorpion<br>(10)</td>
+                <td class="monster_normal">Copycat Mask<br>(6)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>23</th>
+                <td class="monster_dragon">Dragon<br>(6)</td>
+                <td></td>
+                <td class="monster_normal">Monarch Tusker<br>(7)</td>
+                <td class="monster_drain">Demon Scorpion<br>(10)</td>
+                <td class="monster_normal">Copycat Mask<br>(6)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>24</th>
+                <td class="monster_dragon">Dragon<br>(6)</td>
+                <td></td>
+                <td class="monster_normal">Monarch Tusker<br>(7)</td>
+                <td class="monster_drain">Demon Scorpion<br>(10)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>25</th>
+                <td colspan="12" class="monster_normal">Boss Oni (Boss)</td>
+              </tr>
             </table>
             <p class="dungeon_table_notes">
               Numbers in parenthesis show monster spawn rate values.<br>
               Divide the number by the total for that row to get the %.<br>
               Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
             </p>
+                        <h4>Golden Interval</h4>
+            <p class="dungeon_table_notes"></p>
+            <div class="dungeon_monster_table_gold">
+              <table>
+                <tr>
+                  <th>1</th>
+                  <td class="monster_normal">Gamagucci<br>(7)</td>
+                  <td class="monster_item_change">Straw Voodoll<br>(8)</td>
+                  <td class="monster_normal">Rainy Doll<br>(8)</td>
+                  <td class="monster_normal">Summon Ninja<br>(5)</td>
+                  <td class="monster_normal">Landmine Ninja<br>(5)</td>
+                  <td class="monster_normal">Sheep Priest<br>(8)</td>
+                  <td class="monster_weapon">Samuraidon<br>(8)</td>
+                  <td class="monster_weapon">Taishodon<br>(8)</td>
+                  <td class="monster_one_eyed">Golem<br>(4)</td>
+                </tr>
+                <tr>
+                  <th>2</th>
+                  <td class="monster_normal">Gamagucci<br>(7)</td>
+                  <td class="monster_weapon">Kengo<br>(8)</td>
+                  <td class="monster_dragon">Shaaga<br>(8)</td>
+                  <td class="monster_normal">Summon Ninja<br>(5)</td>
+                  <td class="monster_normal">Landmine Ninja<br>(5)</td>
+                  <td class="monster_normal">Sheep Priest<br>(8)</td>
+                  <td class="monster_normal">Goat Pastor<br>(8)</td>
+                  <td class="monster_weapon">Taishodon<br>(8)</td>
+                  <td class="monster_one_eyed">Golem<br>(4)</td>
+                </tr>
+                <tr>
+                  <th>3</th>
+                  <td class="monster_drain">Twisty Hani<br>(5)</td>
+                  <td class="monster_weapon">Kengo<br>(8)</td>
+                  <td class="monster_dragon">Shaaga<br>(8)</td>
+                  <td class="monster_normal">Summon Ninja<br>(5)</td>
+                  <td class="monster_normal">Landmine Ninja<br>(5)</td>
+                  <td class="monster_normal">Sheep Priest<br>(8)</td>
+                  <td class="monster_normal">Goat Pastor<br>(8)</td>
+                  <td class="monster_weapon">Taishodon<br>(8)</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>4</th>
+                  <td class="monster_drain">Twisty Hani<br>(5)</td>
+                  <td class="monster_drain">Serious Slug<br>(8)</td>
+                  <td class="monster_dragon">Shaaga<br>(8)</td>
+                  <td class="monster_ghost">Pumphantom<br>(8)</td>
+                  <td class="monster_bomb">Pop Tank<br>(8)</td>
+                  <td class="monster_bomb">Wolf Droid<br>(8)</td>
+                  <td class="monster_normal">Goat Pastor<br>(8)</td>
+                  <td class="monster_water">Bored Kappa<br>(8)</td>
+                  <td class="monster_normal">Armor Spider<br>(5)</td>
+                </tr>
+              </table>
+              <p class="dungeon_table_notes">3~5F total. No enemies on the final floor.</p>
           </div>
           <h2 id="items">Items</h2>
           <div class="dungeon_item_table_key">
+            TODO: update item table with Onigashima data!
             <p>Key: <b>F</b>loor, <b>P</b>resto, <b>S</b>hop, <b>T</b>rader, <b>M</b>onster</p>
           </div>
           <div class="dungeon_item_table">
